# game-engine

./: CMakeLists.txt  README.md
assets/: map-data.tmx  map-data2.tmx  map.tmx  map2.tmx
assets/animations/: bird_anim.xml  bull_animations.xml  car.xml  enemy.xml  player.xml
src/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
src/ecs/: Component.hpp  ComponentType.hpp  Entity.hpp  EventManager.hpp  World.cpp  World.hpp
src/ecs/event/: BaseEvent.hpp  EventManager.hpp
src/ecs/system/: AnimationClip.hpp  AnimationSystem.hpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DestructionSystem.hpp  Direction.hpp  EventResponseSystem.cpp  EventResponseSystem.hpp  HUDSystem.cpp  HUDSystem.hpp  KeyboardInputSystem.cpp  KeyboardInputSystem.hpp  MainMenuSystem.cpp  MainMenuSystem.hpp  MouseInputSystem.cpp  MouseInputSystem.hpp  Movement.hpp  PhysicsSystem.hpp  PlayerRotationSystem.hpp  PreRenderSystem.hpp  RenderSystem.hpp  RotationSystem.hpp  SpawnTimerSystem.hpp  TargetingSystem.hpp  UIRenderSystem.hpp
src/ecs/system/AnimationCallbacks/: CarAnim.hpp  EnemyAnimCallback.hpp  PlayerAnim.hpp  ProjectileCallback.hpp
src/ecs/system/event-response-systems/: ActionResponseSystem.cpp  ActionResponseSystem.hpp  CollisionResponseSystem.cpp  CollisionResponseSystem.hpp  MouseUIResponseSystem.cpp  MouseUIResponseSystem.hpp
src/manager/: AssetManager.cpp  AssetManager.hpp  Scene.cpp  Scene.hpp  SceneManager.hpp  TextureManager.cpp  TextureManager.hpp
src/scene/: Scene.cpp  Scene.hpp  SceneType.hpp
src/utils/: Collision.cpp  Collision.hpp  RenderUtils.hpp  Vector2D.cpp  Vector2D.hpp
